[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Doctorxsx <allen31042@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
